[metadata]
name = openstackdocstheme
summary = OpenStack Docs Theme
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Topic :: Documentation

[extras]
test =
  os-api-ref>=1.0.0 # Apache-2.0
  reno>=2.5.0 # Apache-2.0
# Notes:
# reno needs openstackdocstheme which needs reno (cycle dep).
# os-api-ref needs openstackdocstheme which needs os-api-ref (cycle dep).
# Put them in extras to make it an optional test dependency.

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    openstackdocstheme

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[wheel]
universal = 1

[pbr]
warnerrors = True
