[metadata]
name = openstackdocstheme
summary = OpenStack Docs Theme
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/openstackdocstheme/latest/
python_requires = >=3.10
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3 :: Only
    Topic :: Documentation

[files]
packages =
    openstackdocstheme
scripts =
    bin/docstheme-build-translated.sh
    bin/docstheme-lang-display-name.py
    bin/docstheme-build-pdf
